# paribus-bulk-processing-system

./: DOCKER_TEST_RESULTS.md  Dockerfile  README.md  docker-compose.yml  prek.toml  pyproject.toml  render.yaml
app/: __init__.py  bulk_service.py  csv_utils.py  hospital_client.py  main.py  schemas.py  settings.py
tests/: conftest.py  test_bulk_upload.py
tests/error_scenarios/: test_bulk_errors.py
tests/integration/: test_bulk_api.py
tests/unit/: test_bulk_service.py  test_csv_utils.py
