[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "paribus-bulk-processing-system"
version = "0.1.0"
description = "Bulk processing system for hospital CSV uploads"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110",
  "httpx>=0.27",
  "python-multipart>=0.0.9",
  "uvicorn>=0.30",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.commitizen]
name = "cz_conventional_commits"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = [
    "black>=26.3.1",
    "commitizen>=4.15.0",
    "pre-commit>=4.6.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.15.12",
]
